--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,9 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:title="@string/title"/>
+        app:title="@string/title"
+        app:menuBGColor="@color/colorPrimary"
+        app:menuTextColor="@color/colorAccent"/>
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator"
