--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:title="@string/title"
-        app:menuBGColor="@color/colorPrimary"
-        app:menuTextColor="@color/colorAccent"/>
+        app:title="@string/title" />
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator"
@@ -25,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/ic_toolbar"
-            app:layout_behavior=".ToolbarScrollingBehavior"/>
+            app:layout_behavior=".ToolbarScrollingBehavior" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -33,5 +31,6 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/recycler_item" />
+
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
