--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -14,16 +14,32 @@
         android:layout_margin="10dp"
         android:text="@string/app_name" />
 
-    <android.support.v7.widget.AppCompatSeekBar
-        android:id="@+id/seekBar"
-        style="@style/MySeekBar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:max="2"
-        android:progress="0" />
+        android:layout_height="60dp">
+
+        <android.support.v7.widget.AppCompatSeekBar
+            android:id="@+id/seekBar"
+            style="@style/MySeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:max="2"
+            android:progress="0" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/seekBar"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="15 dias"
+            />
+
+    </RelativeLayout>
 
     <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
